--- a/provisioning/roles/kubebin/tasks/main.yml
+++ b/provisioning/roles/kubebin/tasks/main.yml
@@ -7,7 +7,7 @@
     state: present
     update_cache: true
 
-- name: Add Kubernetes's GPG key
+- name: Add Kubernetes' GPG key
   apt_key:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
     state: present
